# Python-Django-Prod

./: Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
mysite/shopapp/: forms.py
