[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Oleg Artemov <artemovom@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.6"
djangorestframework = "^3.14.0"
asgiref = "^3.7.2"
attrs = "^23.1.0"
certifi = "^2023.7.22"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.3"
drf-spectacular = "^0.26.5"
gunicorn = "^21.2.0"
inflection = "^0.5.1"
jsonschema = "^4.19.1"
jsonschema-specifications = "^2023.7.1"
packaging = "^23.2"
pillow = "^10.0.1"
pytz = "^2023.3.post1"
pyyaml = "^6.0.1"
referencing = "^0.30.2"
rpds-py = "^0.10.6"
sentry-sdk = "^1.32.0"
sqlparse = "^0.4.4"
typing-extensions = "^4.8.0"
uritemplate = "^4.1.1"
urllib3 = "^2.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
